--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<div class="col-md-12 ftco-animate text-center">
 						<h1 class="mb-2">I AM <br> Sushil Kumar Rout</h1>
 						<h2 class="subheading mb-4"><span>&</span> <br> a Web Developer</h2>
-						<p><a href="#" class="btn btn-primary">Hire me</a> <a href="img/Resume pic.jpg" class="btn btn-white">Download
+						<p><a href="#" class="btn btn-primary">Hire me</a> <a href="img/Sushil_Kumar_Rout.jpg" class="btn btn-white">Download
 								CV</a></p>
 					</div>
 				</div>
@@ -203,7 +203,7 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">Python</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='68'>
@@ -271,7 +271,7 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">js</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">Js</h2>
 
 						<!-- Progress bar 1 -->
 						<div class="progress mx-auto" data-value='68'>
